# archive-be

./: .gitignore  Dockerfile  README.md  config.py  deploy.txt  docker-compose.yaml  dockercompose.yaml  package.json  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  services.py
app/auth/: jwt.py
app/core/: config.py  redis.py  session.py
app/db/: auth_query.py  category_query.py  connection.py  contents.py  contents_list.py  post.py  post_query.py  query.py
app/router/: category.py  contents.py  contents_list.py  login.py  post.py  signup.py
app/services/: category.py  contents.py  contents_list.py  login.py  post.py  signup.py  websocket_manager.py  youtube_downloader.py
