[tool.poetry]
name = "archive-be"
version = "0.1.0"
description = ""
authors = ["pyhilandjy <hilandjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
redis = "^6.1.0"
sqlalchemy = "^2.0.41"
passlib = "^1.7.4"
aiosmtplib = "^4.0.1"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
psycopg2-binary = "^2.9.10"
bcrypt = "^4.3.0"
python-jose = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
